objects/ASI_MFM_Payment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <formula>ASI_MFM_Supplier_Name__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active AP Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Remark__c</fullName>
        <label>AP Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_P_Type__c</fullName>
        <label>A&amp;P Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Media A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Other A&amp;P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Amount__c</fullName>
        <label>Accrual Amount</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Accrual_Amount_Payment_Currency__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Complete__c</fullName>
        <formula>ASI_MFM_Total_Reverse_Amount__c == ASI_MFM_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Date__c</fullName>
        <label>Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accrual Request</label>
        <referenceTo>ASI_MFM_Accrual_Request__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Type__c</fullName>
        <label>Accrual Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Accrual</fullName>
                </value>
                <value>
                    <fullName>Year End Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Voucher__c</fullName>
        <label>Accrual Voucher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_MKT_Expense_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual MKT Expense Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Paid_Amount__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_Actual_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjustment_Amount__c</fullName>
        <description>For JP Use</description>
        <formula>ASI_MFM_Payment_Amount__c+ ASI_MFM_VAT_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Allocation_Method_Ratio__c</fullName>
        <formula>TEXT( ASI_MFM_Expense_Type__r.ASI_MFM_PercentageAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Method Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Allocation_Method__c</fullName>
        <formula>TEXT(ASI_MFM_Expense_Type__r.ASI_MFM_AllocationMethod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AlternatePayee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Payee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND ((6 AND 7) OR (8 AND 9)))</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Supplier</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payment, CN Payment Read-Only</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MKTEXP HK Payment, MKTEXP HK Payment Read-Only</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MKTEXP TR Payment, MKTEXP TR Payment Read-Only</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TR Supplier</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_MFM_Credit_Note__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_MFM_Credit_Note__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TR Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (Alternate Payee)</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Apply_CIP_Logic__c</fullName>
        <formula>if( ASI_MFM_Contract__c != null, ASI_MFM_Contract__r.ASI_MFM_Apply_CIP_Logic__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apply CIP Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Approval Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Asia_Approver__c</fullName>
        <label>Asia Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BC_Code__c</fullName>
        <formula>ASI_MFM_Tax_Code__r.ASI_MFM_BC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active BU Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_BU__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Bank_Account__c</fullName>
        <formula>ASI_MFM_Supplier_Name__r.ASI_KOR_Wholesaler_Bank_Account_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Bank_Information__c</fullName>
        <formula>ASI_MFM_Supplier_Name__r.ASI_KOR_Wholesaler_Bank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner_Manager__c</fullName>
        <formula>CASESAFEID(ASI_MFM_Budget_Owner__r.ManagerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner_Team__c</fullName>
        <formula>TEXT(ASI_MFM_Budget_Owner__r.ASI_MFM_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payment, CN Payment Read-Only</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>ASI CN</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Payments9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Related Payments</relationshipLabel>
        <relationshipName>Payments_CAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Approved_Amount_Payment__c</fullName>
        <formula>ASI_MFM_CN_Payment_Max_Approved_Amount__c &gt;= ASI_MFM_Payment_Amount__c</formula>
        <label>Approved Amount &gt; Payment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Counter_of_Payment_Line__c</fullName>
        <label>Counter of Payment Line</label>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Current_Approver_Txt__c</fullName>
        <label>Current Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Deem_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deem Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Discount_Pool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsfgCw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Fiscal_Year__c</fullName>
        <formula>Text(ASI_MFM_Prefix__r.ASI_MFM_Fiscal_year__c)</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Last_Approval_Time__c</fullName>
        <label>Last Approval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Next_Approver_ID__c</fullName>
        <label>Next Approver ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_No_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Payment_Amount_Net_of_Tax__c</fullName>
        <label>Payment Amount Net of Tax</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment_Amount_Net_of_Tax__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Payment_Max_Approved_Amount__c</fullName>
        <label>Payment Max Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Payment_Original_Amount__c</fullName>
        <label>Payment Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsgMAi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsgMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsgMB2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Comments__c</fullName>
        <label>Return Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Return_Status__c</fullName>
        <label>Return Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending by User</fullName>
                </value>
                <value>
                    <fullName>Pending by Account Team</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_SYS_Count_Payment_Line_Items__c</fullName>
        <label>SYS_Count_Payment_Line_Items</label>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Tax_Code_Picklist__c</fullName>
        <label>Tax Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11%</fullName>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>6%</fullName>
                </value>
                <value>
                    <fullName>OTH</fullName>
                </value>
                <value>
                    <fullName>CAPX</fullName>
                </value>
                <value>
                    <fullName>13%</fullName>
                </value>
                <value>
                    <fullName>1.5%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>CX16</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>9%</fullName>
                </value>
                <value>
                    <fullName>CX13</fullName>
                </value>
                <value>
                    <fullName>1%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Tax_Amount__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_eMail_Subject__c</fullName>
        <formula>IF( RecordType.DeveloperName == &quot;ASI_MFM_CN_Payment&quot; || RecordType.DeveloperName == &quot;ASI_MFM_CN_Payment_Read_Only&quot;, ASI_MFM_Prefix__r.ASI_MFM_CN_eMail_Subject__c, NULL )</formula>
        <label>eMail Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_1_Amount__c</fullName>
        <label>COA 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_1__c</fullName>
        <label>COA 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_2_Amount__c</fullName>
        <label>COA 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_2__c</fullName>
        <label>COA 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_3_Amount__c</fullName>
        <label>COA 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_COA_3__c</fullName>
        <label>COA 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cash_Out_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Out Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cashflow_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Expected Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cheque__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Contract_Changes_Application__c</fullName>
        <label>Contract Changes Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_MFM_Rental_Request_Line__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Copy_Status__c</fullName>
        <formula>TEXT(ASI_MFM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Credit_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BHT</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NTD</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department_Text__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <formula>ASI_MFM_Prefix__r.ASI_MFM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Dummy_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Notification_Template__c</fullName>
        <label>Email Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Time__c</fullName>
        <description>GF Direction Payment Email Trigger Time (send email 2 mins after direction payment creation)</description>
        <formula>LastModifiedDate  - 0.03938</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Entertainment_Amount__c</fullName>
        <label>Entertainment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Entertainment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entertainment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exceed_Tolerance_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed Tolerance Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Date_From__c</fullName>
        <label>Expense Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Date_To__c</fullName>
        <label>Expense Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Type</label>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FOC_Detail_External_ID__c</fullName>
        <label>FOC Detail External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FinanceVerifiedBy__c</fullName>
        <label>Finance Verified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance_Verify_LineNumber__c</fullName>
        <label>Finance Verify Line Number</label>
        <summaryFilterItems>
            <field>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment_Line_Item_Finance_Verify__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_MFM_Payment_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>KR Payment Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
                <value>
                    <fullName>FY2425</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Gross_Amount__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Payment_Amount_Include_VAT__c</fullName>
        <label>Payment Amount (Include VAT)</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_GF_Payment_Amount_Include_VAT__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Service_Goods__c</fullName>
        <label>Service/Goods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_VAT_Amount__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Warning_Message__c</fullName>
        <formula>IF( ASI_MFM_Need_Approval__c , &quot;WARNING: THIS PAYMENT EXCEEDS THE PO AMOUNT BY MORE THAN 10%&quot;, &quot;&quot;)</formula>
        <label>Warning Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Goods_In_Transit_Amount_SFDC__c</fullName>
        <description>Roll up summary for SFDC</description>
        <label>Goods In Transit Amount from Invoice</label>
        <summarizedField>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment_Item_Type__c</field>
            <operation>equals</operation>
            <value>RNV</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Payment_Line_Item__c.ASI_MFM_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Goods_In_Transit_Amount__c</fullName>
        <label>Goods In Transit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>